# qt-frameview

./: example_app.py  pyproject.toml
EasyQtPandasTable/: model.py  widget.py
EasyQtPandasTable/delegates/: CheckBoxDelegate.py
dataframe_table/: __init__.py  filters.py  model.py  widget.py
dataframe_table/delegates/: ButtonDelegate.py  CheckBoxDelegate.py  __init__.py
dataframe_table/filters/: AbstractFilter.py  DropdownFilter.py  NumericFilter.py  OptionsFilter.py  TextFilter.py  __init__.py
tests/: conftest.py  test_dataframe_table.py  test_filters.py  test_options_filter.py  test_widget.py
