[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EasyQtPandasTable"
version = "0.1.1"
description = "A PyQt6 table widget backed by pandas DataFrames"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "PyQt6>=6.10",
    "pandas>=3.0",
    "numpy>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-qt>=4.5",
]

[tool.setuptools.packages.find]
include = ["EasyQtPandasTable*"]

[tool.pytest.ini_options]
qt_api = "pyqt6"
testpaths = ["tests"]
